--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.menu-container {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 900px;
+    background-color: #3B5D50;
+    color: black;
+    transition: transform 0.3s ease-in-out;
+    transform: translateX(-100%);
+  }
+  
+  .menu-container.show-menu {
+    transform: translateX(0%);
+  }
+  
+  
