--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -32,7 +32,7 @@
     width: 12px; /* Customize dot size */
     height: 12px; /* Customize dot size */
     border-radius: 50%; /* Make the dots circular */
-    background-color: #3B5D50; /* Customize inactive dot color */
+    background-color: #6A6A6A; /* Customize inactive dot color */
     display: inline-block;
     margin: 0 5px; /* Add spacing between dots */
   }
